[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/akaDylanPlain.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Hud.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 92
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 1 )

[node name="Hud" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 20
custom_constants/margin_left = 40
custom_constants/margin_bottom = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGame" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 20.0
margin_right = 1880.0
margin_bottom = 1060.0

[node name="HBoxContainer" type="HBoxContainer" parent="InGame"]
margin_right = 1840.0
margin_bottom = 1013.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="InGame/HBoxContainer"]
margin_right = 120.0
margin_bottom = 23.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Level title"
align = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InGame/HBoxContainer"]
margin_left = 124.0
margin_right = 1840.0
margin_bottom = 1013.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TimeLabel" type="Label" parent="InGame/HBoxContainer/VBoxContainer"]
margin_right = 1716.0
margin_bottom = 23.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "0:00"
align = 2

[node name="RocketsLabel" type="Label" parent="InGame/HBoxContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 1716.0
margin_bottom = 72.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2

[node name="KeyLabel" type="Label" parent="InGame"]
margin_top = 1017.0
margin_right = 1840.0
margin_bottom = 1040.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "Level title"
align = 2

[node name="Victory" type="VBoxContainer" parent="."]
visible = false
margin_left = 700.0
margin_top = 280.0
margin_right = 1220.0
margin_bottom = 800.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Victory" type="Label" parent="Victory"]
margin_right = 520.0
margin_bottom = 126.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
text = "Victory"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Victory"]
margin_top = 130.0
margin_right = 520.0
margin_bottom = 277.0
custom_constants/margin_top = 60
custom_constants/margin_bottom = 20

[node name="VictoryTimeLabel" type="Label" parent="Victory/MarginContainer"]
margin_top = 60.0
margin_right = 520.0
margin_bottom = 127.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
text = "Time: 1:32"
align = 1

[node name="VictoryRocketLabel" type="Label" parent="Victory"]
margin_top = 281.0
margin_right = 520.0
margin_bottom = 348.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
text = "Rockets: 12"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="Victory"]
margin_top = 352.0
margin_right = 520.0
margin_bottom = 520.0
custom_constants/margin_top = 60
custom_constants/margin_bottom = 20

[node name="VictoryScoreLabel" type="Label" parent="Victory/MarginContainer2"]
margin_top = 60.0
margin_right = 520.0
margin_bottom = 148.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
text = "Score: 100%"
align = 1

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
